fix header, cta, roadmap note, footer spacing for >1900px

--- a/src/styles/components/_headerStyles.scss
+++ b/src/styles/components/_headerStyles.scss
@@ -1,5 +1,18 @@
+.NavItemSpacing {
+  margin-right: 24px;
+
+  @media (min-width: 1900px) {
+    margin-right: 36px;
+  }
+}
+
 .NavDivider {
   height: 24px;
-  width: 1px;
+  width: 3px;
   background-color: $divider-color;
+  margin: 0 24px;
+
+  @media (min-width: 1900px) {
+    margin: 0 36px;
+  }
 }
